force-app/main/default/objects/Contract/fields/Contract_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sub_Type__c</fullName>
    <inlineHelpText>Please enter the value of the contract over it&apos;s lifetime.</inlineHelpText>
    <label>Contract Amount/Value</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>