force-app/main/default/objects/Contract/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <inlineHelpText>Please select the type of services covered by the contract.</inlineHelpText>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Suppliers</fullName>
            </value>
            <value>
                <fullName>Admin/Management Services</fullName>
            </value>
            <value>
                <fullName>Offices/Premises</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>Programs</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>