force-app/main/default/objects/Contract/fields/CQ_Department__c.field-meta.xml
<CustomField>
    <fullName>CQ_Department__c</fullName>
    <label>CQ Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Services</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>Programs</fullName>
            </value>
            <value>
                <fullName>Office of the CEO</fullName>
            </value>
            <value>
                <fullName>People &amp; Culture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>