force-app/main/default/objects/Contract/fields/CQContact__c.field-meta.xml
<CustomField>
    <fullName>CQContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CQ Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>