force-app/main/default/objects/Contract/fields/Evaluation_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Criteria__c</fullName>
    <label>Evaluation Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>