force-app/main/default/objects/Contract/fields/Related_Companies__c.field-meta.xml
<CustomField>
    <fullName>Related_Companies__c</fullName>
    <label>Related Companies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>