force-app/main/default/objects/Contract/fields/Renegotiation_and_Variations_Clause__c.field-meta.xml
<CustomField>
    <fullName>Renegotiation_and_Variations_Clause__c</fullName>
    <inlineHelpText>When, and how can we vary this contract.</inlineHelpText>
    <label>Renegotiation and Variations Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>