force-app/main/default/objects/Contract/fields/Renewal_Option__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Option__c</fullName>
    <inlineHelpText>Do we plan to renew this contract?  If so, is it month to month, or for a fixed period.</inlineHelpText>
    <label>Renewal Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>