force-app/main/default/objects/Contract/fields/Risks_and_Penalties__c.field-meta.xml
<CustomField>
    <fullName>Risks_and_Penalties__c</fullName>
    <label>Risks and Penalties</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>