force-app/main/default/objects/Contract/recordTypes/Revenue_Contract.recordType-meta.xml
<RecordType>
    <fullName>Revenue_Contract</fullName>
    <active>true</active>
    <label>Revenue Contract</label>
</RecordType>