force-app/main/default/objects/Contract/recordTypes/Vendor_Contract.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Contract</fullName>
    <active>true</active>
    <label>Vendor Contract</label>
</RecordType>